Fixed jumbotron image width on mobile

--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -173,7 +173,6 @@ h4 {
   background-position: center top;
   background-size: cover;
   height: 80%;
-  height: 80vh;
   overflow: hidden;
   margin-bottom: 0px;
   position: relative;
